crates/ruff/src/rules/flake8_bugbear/snapshots/ruff__rules__flake8_bugbear__tests__B028_B028.py.snap
---
source: crates/ruff/src/rules/flake8_bugbear/mod.rs
expression: diagnostics
---
- kind:
    name: NoExplicitStacklevel
    body: No explicit stacklevel keyword argument found. The warn method from the warnings module uses a stacklevel of 1 by default. This will only show a stack trace for the line on which the warn method is called.
    suggestion: ~
    fixable: false
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 13
  fix: ~
  parent: ~
- kind:
    name: NoExplicitStacklevel
    body: No explicit stacklevel keyword argument found. The warn method from the warnings module uses a stacklevel of 1 by default. This will only show a stack trace for the line on which the warn method is called.
    suggestion: ~
    fixable: false
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 13
  fix: ~
  parent: ~

