crates/ruff/src/rules/flake8_bugbear/snapshots/ruff__rules__flake8_bugbear__tests__B029_B029.py.snap
---
source: crates/ruff/src/rules/flake8_bugbear/mod.rs
expression: diagnostics
---
- kind:
    name: ExceptWithEmptyTuple
    body: "Using `except ():` with an empty tuple does not catch anything; add exceptions to handle"
    suggestion: ~
    fixable: false
  location:
    row: 8
    column: 0
  end_location:
    row: 9
    column: 8
  fix:
    edits: []
  parent: ~
- kind:
    name: ExceptWithEmptyTuple
    body: "Using `except ():` with an empty tuple does not catch anything; add exceptions to handle"
    suggestion: ~
    fixable: false
  location:
    row: 13
    column: 0
  end_location:
    row: 14
    column: 8
  fix:
    edits: []
  parent: ~

