crates/ruff/src/rules/flake8_bugbear/snapshots/ruff__rules__flake8_bugbear__tests__extend_immutable_calls.snap
---
source: crates/ruff/src/rules/flake8_bugbear/mod.rs
expression: diagnostics
---
- kind:
    name: FunctionCallArgumentDefault
    body: "Do not perform function call `Depends` in argument defaults"
    commit: ~
    fixable: false
  location:
    row: 19
    column: 50
  end_location:
    row: 19
    column: 63
  fix: ~
  parent: ~

