crates/ruff/src/rules/flake8_bugbear/snapshots/ruff__rules__flake8_bugbear__tests__extend_immutable_calls_arg_default.snap
---
source: crates/ruff/src/rules/flake8_bugbear/mod.rs
---
B008_extended.py:24:51: B008 Do not perform function call `Depends` in argument defaults
   |
24 | def error_due_to_missing_import(data: List[str] = Depends(None)):
   |                                                   ^^^^^^^^^^^^^ B008
25 |     ...
   |


